--- a/MIS.BusinessLogic/MIS.BusinessLogic.csproj
+++ b/MIS.BusinessLogic/MIS.BusinessLogic.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MIS.DataAccess.Abstractions\MIS.DataAccess.Abstractions.csproj" />
     <ProjectReference Include="..\MIS.Model\MIS.Model.csproj" />
   </ItemGroup>
