--- a/MIS/MIS.csproj
+++ b/MIS/MIS.csproj
@@ -22,8 +22,15 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MIS.BusinessLogic\MIS.BusinessLogic.csproj" />
+    <ProjectReference Include="..\MIS.DataAccess.Abstractions\MIS.DataAccess.Abstractions.csproj" />
     <ProjectReference Include="..\MIS.DataAccess\MIS.DataAccess.csproj" />
+    <ProjectReference Include="..\MIS.Model\MIS.Model.csproj" />
     <ProjectReference Include="..\MIS.SignalR\MIS.SignalR.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Images\" />
+    <Folder Include="wwwroot\Images\" />
   </ItemGroup>
 
 </Project>
